tests-integration/tests/roundtrip/invalid/semantic_errors/keyword_as_identifier/via-conjure.expected-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/invalid/semantic_errors/keyword_as_identifier/keyword_as_identifier.essence:1:6:
  |
1 | find find : int(1..10)
  |      ^
Missing Domain

tests/roundtrip/invalid/semantic_errors/keyword_as_identifier/keyword_as_identifier.essence:1:6:
  |
1 | find find : int(1..10)
  |      ^
Missing <identifier>

tests/roundtrip/invalid/semantic_errors/keyword_as_identifier/keyword_as_identifier.essence:1:6:
  |
1 | find find : int(1..10)
  |      ^
Missing :

tests/roundtrip/invalid/semantic_errors/keyword_as_identifier/keyword_as_identifier.essence:1:11:
  |
1 | find find : int(1..10)
  |           ^
Missing <identifier>

tests/roundtrip/invalid/semantic_errors/keyword_as_identifier/keyword_as_identifier.essence:2:11:
  |
2 | such that find > 5
  |           ^
Missing Expression

tests/roundtrip/invalid/semantic_errors/keyword_as_identifier/keyword_as_identifier.essence:2:16:
  |
2 | such that find > 5
  |                ^^^
Skipped tokens

tests/roundtrip/invalid/semantic_errors/keyword_as_identifier/keyword_as_identifier.essence:2:16:
  |
2 | such that find > 5
  |                ^
Missing Domain

tests/roundtrip/invalid/semantic_errors/keyword_as_identifier/keyword_as_identifier.essence:2:16:
  |
2 | such that find > 5
  |                ^
Missing <identifier>

tests/roundtrip/invalid/semantic_errors/keyword_as_identifier/keyword_as_identifier.essence:2:16:
  |
2 | such that find > 5
  |                ^
Missing :

